add avoid peaks